--- a/ui_templates/mainwindow.ui
+++ b/ui_templates/mainwindow.ui
@@ -30,7 +30,7 @@
   </property>
   <property name="windowIcon">
    <iconset resource="../mainwindow.qrc">
-    <normaloff>:/MainWindow/images/icon/cc_icon_16.png</normaloff>:/MainWindow/images/icon/cc_icon_16.png</iconset>
+    <normaloff>:/CC/Icons/images/icon/cc_icon_16.png</normaloff>:/CC/Icons/images/icon/cc_icon_16.png</iconset>
   </property>
   <property name="autoFillBackground">
    <bool>true</bool>
@@ -65,7 +65,7 @@
      </property>
      <property name="icon">
       <iconset resource="../mainwindow.qrc">
-       <normaloff>:/MainWindow/images/dbCamSensorSymbol.png</normaloff>:/MainWindow/images/dbCamSensorSymbol.png</iconset>
+       <normaloff>:/CC/images/dbCamSensorSymbol.png</normaloff>:/CC/images/dbCamSensorSymbol.png</iconset>
      </property>
      <widget class="QMenu" name="menuCameraSensor">
       <property name="title">
@@ -84,6 +84,7 @@
     <property name="title">
      <string>工具(&amp;T)</string>
     </property>
+    <addaction name="actionPointPicking"/>
    </widget>
    <widget class="QMenu" name="menuDisplay">
     <property name="title">
@@ -292,7 +293,7 @@
   <action name="actionOpen">
    <property name="icon">
     <iconset resource="../mainwindow.qrc">
-     <normaloff>:/MainWindow/images/ccOpen.png</normaloff>:/MainWindow/images/ccOpen.png</iconset>
+     <normaloff>:/CC/images/ccOpen.png</normaloff>:/CC/images/ccOpen.png</iconset>
    </property>
    <property name="text">
     <string>打开</string>
@@ -304,7 +305,7 @@
   <action name="actionSave">
    <property name="icon">
     <iconset resource="../mainwindow.qrc">
-     <normaloff>:/MainWindow/images/ccSave.png</normaloff>:/MainWindow/images/ccSave.png</iconset>
+     <normaloff>:/CC/images/ccSave.png</normaloff>:/CC/images/ccSave.png</iconset>
    </property>
    <property name="text">
     <string>保存</string>
@@ -370,7 +371,7 @@
   <action name="actionSetViewTop">
    <property name="icon">
     <iconset resource="../mainwindow.qrc">
-     <normaloff>:/MainWindow/images/ccViewZpos.png</normaloff>:/MainWindow/images/ccViewZpos.png</iconset>
+     <normaloff>:/CC/images/ccViewZpos.png</normaloff>:/CC/images/ccViewZpos.png</iconset>
    </property>
    <property name="text">
     <string>俯视</string>
@@ -382,7 +383,7 @@
   <action name="actionSetViewFront">
    <property name="icon">
     <iconset resource="../mainwindow.qrc">
-     <normaloff>:/MainWindow/images/ccViewYpos.png</normaloff>:/MainWindow/images/ccViewYpos.png</iconset>
+     <normaloff>:/CC/images/ccViewYpos.png</normaloff>:/CC/images/ccViewYpos.png</iconset>
    </property>
    <property name="text">
     <string>前视图</string>
@@ -394,7 +395,7 @@
   <action name="actionSetViewLeft">
    <property name="icon">
     <iconset resource="../mainwindow.qrc">
-     <normaloff>:/MainWindow/images/ccViewXpos.png</normaloff>:/MainWindow/images/ccViewXpos.png</iconset>
+     <normaloff>:/CC/images/ccViewXpos.png</normaloff>:/CC/images/ccViewXpos.png</iconset>
    </property>
    <property name="text">
     <string>左视图 </string>
@@ -406,7 +407,7 @@
   <action name="actionSetViewRight">
    <property name="icon">
     <iconset resource="../mainwindow.qrc">
-     <normaloff>:/MainWindow/images/ccViewXneg.png</normaloff>:/MainWindow/images/ccViewXneg.png</iconset>
+     <normaloff>:/CC/images/ccViewXneg.png</normaloff>:/CC/images/ccViewXneg.png</iconset>
    </property>
    <property name="text">
     <string>右视图</string>
@@ -418,7 +419,7 @@
   <action name="actionSetViewBottom">
    <property name="icon">
     <iconset resource="../mainwindow.qrc">
-     <normaloff>:/MainWindow/images/ccViewZneg.png</normaloff>:/MainWindow/images/ccViewZneg.png</iconset>
+     <normaloff>:/CC/images/ccViewZneg.png</normaloff>:/CC/images/ccViewZneg.png</iconset>
    </property>
    <property name="text">
     <string>仰视图</string>
@@ -430,7 +431,7 @@
   <action name="actionSetViewBack">
    <property name="icon">
     <iconset resource="../mainwindow.qrc">
-     <normaloff>:/MainWindow/images/ccViewYneg.png</normaloff>:/MainWindow/images/ccViewYneg.png</iconset>
+     <normaloff>:/CC/images/ccViewYneg.png</normaloff>:/CC/images/ccViewYneg.png</iconset>
    </property>
    <property name="text">
     <string>后视图</string>
@@ -442,7 +443,7 @@
   <action name="actionSetViewIso1">
    <property name="icon">
     <iconset resource="../mainwindow.qrc">
-     <normaloff>:/MainWindow/images/ccViewIso1.png</normaloff>:/MainWindow/images/ccViewIso1.png</iconset>
+     <normaloff>:/CC/images/ccViewIso1.png</normaloff>:/CC/images/ccViewIso1.png</iconset>
    </property>
    <property name="text">
     <string>ISO视角一</string>
@@ -454,7 +455,7 @@
   <action name="actionSetViewIso2">
    <property name="icon">
     <iconset resource="../mainwindow.qrc">
-     <normaloff>:/MainWindow/images/ccViewIso2.png</normaloff>:/MainWindow/images/ccViewIso2.png</iconset>
+     <normaloff>:/CC/images/ccViewIso2.png</normaloff>:/CC/images/ccViewIso2.png</iconset>
    </property>
    <property name="text">
     <string>ISO视角二</string>
@@ -466,7 +467,7 @@
   <action name="actionSetOrthoView">
    <property name="icon">
     <iconset resource="../mainwindow.qrc">
-     <normaloff>:/MainWindow/images/ccOrthoMode32.png</normaloff>:/MainWindow/images/ccOrthoMode32.png</iconset>
+     <normaloff>:/CC/images/ccOrthoMode32.png</normaloff>:/CC/images/ccOrthoMode32.png</iconset>
    </property>
    <property name="text">
     <string>正视投影</string>
@@ -475,7 +476,7 @@
   <action name="actionSetCenteredPerspectiveView">
    <property name="icon">
     <iconset resource="../mainwindow.qrc">
-     <normaloff>:/MainWindow/images/ccCenteredPerspective32.png</normaloff>:/MainWindow/images/ccCenteredPerspective32.png</iconset>
+     <normaloff>:/CC/images/ccCenteredPerspective32.png</normaloff>:/CC/images/ccCenteredPerspective32.png</iconset>
    </property>
    <property name="text">
     <string>透视投影(物体为中心)</string>
@@ -484,7 +485,7 @@
   <action name="actionSetViewerPerspectiveView">
    <property name="icon">
     <iconset resource="../mainwindow.qrc">
-     <normaloff>:/MainWindow/images/ccViewerBasedPerspective32.png</normaloff>:/MainWindow/images/ccViewerBasedPerspective32.png</iconset>
+     <normaloff>:/CC/images/ccViewerBasedPerspective32.png</normaloff>:/CC/images/ccViewerBasedPerspective32.png</iconset>
    </property>
    <property name="text">
     <string>透视投影(观察者为中心）</string>
@@ -493,7 +494,7 @@
   <action name="actionSetPivotAlwaysOn">
    <property name="icon">
     <iconset resource="../mainwindow.qrc">
-     <normaloff>:/MainWindow/images/ccPivotOn.png</normaloff>:/MainWindow/images/ccPivotOn.png</iconset>
+     <normaloff>:/CC/images/ccPivotOn.png</normaloff>:/CC/images/ccPivotOn.png</iconset>
    </property>
    <property name="text">
     <string>始终可见</string>
@@ -502,7 +503,7 @@
   <action name="actionSetPivotRotationOnly">
    <property name="icon">
     <iconset resource="../mainwindow.qrc">
-     <normaloff>:/MainWindow/images/ccPivotAuto.png</normaloff>:/MainWindow/images/ccPivotAuto.png</iconset>
+     <normaloff>:/CC/images/ccPivotAuto.png</normaloff>:/CC/images/ccPivotAuto.png</iconset>
    </property>
    <property name="text">
     <string>仅旋转可见</string>
@@ -511,7 +512,7 @@
   <action name="actionSetPivotOff">
    <property name="icon">
     <iconset resource="../mainwindow.qrc">
-     <normaloff>:/MainWindow/images/ccPivotOff.png</normaloff>:/MainWindow/images/ccPivotOff.png</iconset>
+     <normaloff>:/CC/images/ccPivotOff.png</normaloff>:/CC/images/ccPivotOff.png</iconset>
    </property>
    <property name="text">
     <string>始终不可见</string>
@@ -531,7 +532,7 @@
   <action name="actionEditCamera">
    <property name="icon">
     <iconset resource="../mainwindow.qrc">
-     <normaloff>:/MainWindow/images/ccCamera.png</normaloff>:/MainWindow/images/ccCamera.png</iconset>
+     <normaloff>:/CC/images/ccCamera.png</normaloff>:/CC/images/ccCamera.png</iconset>
    </property>
    <property name="text">
     <string>相机参数设置</string>
@@ -540,7 +541,7 @@
   <action name="actionCreateCameraSensor">
    <property name="icon">
     <iconset resource="../mainwindow.qrc">
-     <normaloff>:/MainWindow/images/dbCamSensorSymbol.png</normaloff>:/MainWindow/images/dbCamSensorSymbol.png</iconset>
+     <normaloff>:/CC/images/dbCamSensorSymbol.png</normaloff>:/CC/images/dbCamSensorSymbol.png</iconset>
    </property>
    <property name="text">
     <string>创建</string>
@@ -559,7 +560,7 @@
   <action name="actionTextureGeneration">
    <property name="icon">
     <iconset resource="../mainwindow.qrc">
-     <normaloff>:/MainWindow/images/dbCloudSymbol.png</normaloff>:/MainWindow/images/dbCloudSymbol.png</iconset>
+     <normaloff>:/CC/images/dbCloudSymbol.png</normaloff>:/CC/images/dbCloudSymbol.png</iconset>
    </property>
    <property name="text">
     <string>纹理模型生成</string>
@@ -568,6 +569,20 @@
   <action name="actionDebug">
    <property name="text">
     <string>Debug</string>
+   </property>
+  </action>
+  <action name="action">
+   <property name="text">
+    <string>选点</string>
+   </property>
+  </action>
+  <action name="actionPointPicking">
+   <property name="icon">
+    <iconset resource="../mainwindow.qrc">
+     <normaloff>:/CC/images/ccPointPicking.png</normaloff>:/CC/images/ccPointPicking.png</iconset>
+   </property>
+   <property name="text">
+    <string>选点</string>
    </property>
   </action>
  </widget>
