--- a/mainwindow.qrc
+++ b/mainwindow.qrc
@@ -120,6 +120,12 @@
         <file>images/typeXCoordinate.png</file>
         <file>images/typeYCoordinate.png</file>
         <file>images/typeZCoordinate.png</file>
+        <file>images/smallMarkArea.png</file>
+        <file>images/smallMarkLine.png</file>
+        <file>images/smallMarkPoint.png</file>
+        <file>images/smallMarkDone.png</file>
+        <file>images/smallMarkRedo.png</file>
+        <file>images/smallMarkUndo.png</file>
     </qresource>
     <qresource prefix="/CC/Icons">
         <file>images/icon/cc_viewer_icon_16.png</file>
