**添加了标记包功能** 1. 添加标记包功能，即将多个同类的MarkedObject打包作为一个标记物体； 2. 优化cc2DLabel的2D标签拖拽功能，如果有多个2D标签显示，鼠标拖拽时仅对鼠标所在的2DLabel进行移位； 3. 将MarkedObject子类的drawMeOnly2D()方法移到父类MarkedObject类中，子类仅实现getLabelContent()方法； 4. 优化MarkedObject子类的undo()和redo()方法，返回是否操作成功的标志； 5. 标记线上的顶点改为立方体标记，使用并优化了ccBox类； 6. 理解了virtual关键字的用法：成员方法前面加virtual关键字修饰可以使得由子类指针强制转换得到的父类指针调用该方法时实际调用子类同名方法；

--- a/mainwindow.qrc
+++ b/mainwindow.qrc
@@ -126,6 +126,7 @@
         <file>images/smallMarkDone.png</file>
         <file>images/smallMarkRedo.png</file>
         <file>images/smallMarkUndo.png</file>
+        <file>images/smallMarkObjectBag.png</file>
     </qresource>
     <qresource prefix="/CC/Icons">
         <file>images/icon/cc_viewer_icon_16.png</file>
